--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -14,6 +14,16 @@ on:
         type: string
         default: ""
 
+      base-ref:
+        required: false
+        type: string
+        default: origin/main
+
+      merge-ref:
+        required: false
+        type: string
+        default: HEAD
+
     secrets:
       aws-role-to-assume:
         description: AWS Role to assume. Required for OIDC.
@@ -51,6 +61,9 @@ jobs:
         uses: luiz-patire-vigil/actions-test/.github/actions/terraform-parse-directory-input@main
         with:
           dir-list: ${{ inputs.dir-list }}
+          base-ref: ${{ inputs.base-ref}}
+          merge-ref: ${{ inputs.merge-ref}}
+
   apply:
     runs-on: ubuntu-latest
     needs: set-working-directory-values
