--- a/.github/workflows/terraform-validate-pipeline.yaml
+++ b/.github/workflows/terraform-validate-pipeline.yaml
@@ -53,6 +53,7 @@ jobs:
           dir-list: ${{ inputs.dir-list }}
 
   validate:
+    if: needs.set-working-directory-values.outputs.dirs != '[]'
     runs-on: ubuntu-latest
     needs: set-working-directory-values
     strategy:
